--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -162,6 +162,18 @@ hr.small {
     -o-background-size: cover;
 }
 
+.header1 {
+    display: table;
+    position: relative;
+    width: 100%;
+    height: 50%;
+    background: url(../img/bg1.jpg) no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
 /* About */
 
 .about {
