--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1373,8 +1373,16 @@ a.text-danger:hover {
 }
 .bg-primary {
   color: #fff;
+  background-color: #6a756f;
+}
+
+.bg-grey {
+  color: #fff;
   background-color: #337ab7;
 }
+
+
+
 a.bg-primary:hover {
   background-color: #286090;
 }
